2007-10-05  Will Cohen  <wcohen@redhat.com>
	* utils/opcontrol: Modify opcontrol to allow  short form -l and -d for
	  normal users.

2007-09-25  Brian Twichell <tbrian@us.ibm.com>
	* utils/opcontrol: Modify opcontrol to use a more inclusive
	  kernel range

2007-08-23  Maynard Johnson <maynardj@us.ibm.com>

	* daemon/opd_anon.c: Make anonymous sample recording
	  work with 32-bit OProfile and 64-bit anonymous code

2007-08-14  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/opcontrol.1.in: clarify behaviour of opcontrol -e

2007-08-02  Jens Wilke <jens.wilke@de.ibm.com>

	* ChangeLog:  Correct the date from previous patch (maynardj)

	* libutil++/op_bfd.cpp: Fix sym_offset calculation.
	  Bug triggers on 64 bit systems with code mapped
	  with an address >4G.

2007-08-02  Jens Wilke <jens.wilke@de.ibm.com>

	* libpp/profile_container.cpp: Remove unnecessary offset
	  calculation.

2007-07-18  Maynard Johnson <maynardj@us.ibm.com>

	* doc/Makefile.am: Include buffers diagram in dist

	* doc/oprofile.xml: Correct filename reference to opreport.xsd

2007-07-16  Maynard Johnson <maynardj@us.ibm.com>

        * configure.in: Bump to 0.9.4cvs.

2007-07-16  Maynard Johnson <maynardj@us.ibm.com>

	* configure.in:
	* Makefile.am:  Bump release to 0.9.3 and add a line to
	  EXTRA_DIST to distribute ChangeLog-2006.

2007-07-09  Maynard Johnson <maynardj@us.ibm.com>

        * doc/opreport.xsd:
        * libpp/xml_utils.cpp: Correct schema version bump

2007-07-02  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/populate_for_spu.cpp: Fix logic in is_spu_profile()
	  to handle '--separate=thread' option.

2007-06-27  Maynard Johnson <maynardj@us.ibm.com>

	* ChangeLog: ChangeLog cleanup

2007-06-15  Maynard Johnson <maynardj@us.ibm.com>

	* doc/opreport.xsd:
	* libpp/xml_utils.cpp: Bump schema version to 2.0 to coincide with
	  callgraph elements added recently to the schema

2007-06-13  Maynard Johnson <maynardj@us.ibm.com>

	* doc/oprofile.xml: